glimagesink: properly handle the !opengl3 case

https://bugzilla.gnome.org/show_bug.cgi?id=740012